lintian (2.5.31) UNRELEASED; urgency=medium

  * debian/control:
    + [NT] Recommend dpkg (>= 1.17.14) for the --ctrl-tarfile
      option in dpkg-deb.  Lintian relies on it to support
      (u)deb files without a gzip compressed control.tar file.

  * lib/Lintian/Command.pm:
    + [NT] Use croak() rather than L::Util's fail() on errors.
      The issues are generally not "internal errors".
  * lib/Lintian/Util.pm:
    + [NT] Prefer dpkg-deb --ctrl-tarfile to "ar p" when dpkg
      is recent enough.

 -- Niels Thykier <niels@thykier.net>  Sun, 02 Nov 2014 14:22:59 +0100

lintian (2.5.30) unstable; urgency=medium

  The "welcome Axel Beckert!" release.

  * Summary of tag changes:
    + Removed:
      - deprecated-kdelnk-file

  * checks/menu-format.{desc,pm}:
    + [NT] Retire check for "kdelnk" files.

  * collection/unpacked:
    + [NT] Correct handling of files with 2 or more consecutive
      backslashes.

  * debian/control:
    + [AB] Add a Homepage header pointing to https://lintian.debian.org/
  * debian/copyright:
    + [AB] Add myself to debian/copyright.
  * debian/rules:
    + [NT] Ensure that po4a/*.cfg are always up to date during releases
      builds.

  * helpers/coll/strings-helper:
    + [NT] Filter out duplicate strings.  This applies to the
      majority of all ELF binaries (except ones with very exotic
      file names with glyphs like ":").

  * lib/Lintian/Internal/FrontendUtil.pm:
    + [AB] Don't clean HOME and some XDG_* variables when sanitizing the
      environment. (Closes: #766737)

  * t:
    + [NT] Apply patch from Johannes Schauer to fix FTBFS with
      newer dpkg that have stricter checking of build-profiles.

 -- Niels Thykier <niels@thykier.net>  Sat, 25 Oct 2014 17:03:48 +0200

lintian (2.5.29) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - dbus-policy-at-console
      - dbus-policy-without-send-destination
      - dbus-session-service-wrong-name
      - dbus-system-service-wrong-name