@@ -5,6 +5,10 @@ lintian (2.5.31) UNRELEASED; urgency=medium
       option in dpkg-deb.  Lintian relies on it to support
       (u)deb files without a gzip compressed control.tar file.
 
+  * frontend/lintian:
+    + [NT] Produce a better error message for lintian detects
+      that a check has a dependency on an unknown collection.
+
   * lib/Lintian/Command.pm:
     + [NT] Use croak() rather than L::Util's fail() on errors.
       The issues are generally not "internal errors".
